--- a/templates/login.html
+++ b/templates/login.html
@@ -4,10 +4,10 @@
 
     <div class='container'>
         <form class="form-signin" method='post'>{% csrf_token %}
-{#            <img class="mb-4" src="../static/svg/map.svg" alt="" width="72" height="72">　上手く表示されない#}
-            <h1 class="h3 mb-3 font-weight-normal">Please sign up</h1>
+            {#            <img class="mb-4" src="../static/svg/map.svg" alt="" width="72" height="72">　上手く表示されない#}
+            <h1 class="h3 mb-3 font-weight-normal">Please login</h1>
             {% if error %}
-            {{ error }}
+                {{ error }}
             {% endif %}
             <label for="inputEmail" class="sr-only">Username</label>
             <input type="text" id="inputEmail" class="form-control" placeholder="username" name="username_data" required
@@ -15,9 +15,7 @@
             <label for="inputPassword" class="sr-only">Password</label>
             <input type="password" id="inputPassword" class="form-control" placeholder="Password" name="password_data"
                    required>
-            <div class="checkbox mb-3">
 
-            </div>
             <button class="btn btn-lg btn-primary btn-block" type="submit">Sign up</button>
             <p class="mt-5 mb-3 text-muted">&copy; 2017-2020</p>
         </form>
