--- a/static/css/grid.css
+++ b/static/css/grid.css
@@ -1,23 +1,10 @@
+a1 {
+    font-size: 20px;
+    color: red;
+}
 
-.row.Masonry-2 {
-    column-count: 2;
-    column-gap: 0;
-}
-.row.Masonry-3 {
-    column-count: 3;
-    column-gap: 0;
-}
-.Masonry-2 .col-md-6,
-.Masonry-3 .col-md-4 {
-    float: none;
-    width: 100%;
-    -webkit-column-break-inside: avoid;
-    page-break-inside: avoid;
-    break-inside: avoid;
-}
-@media (max-width: 480px) {
-    .row.Masonry-2,
-    .row.Masonry-3 {
-        column-count: 1;
-    }
+
+b1 {
+    font-size: 20px;
+    color: red;
 }
