--- a/templates/base.html
+++ b/templates/base.html
@@ -1,9 +1,12 @@
 <!doctype html>
+{% load static %}
 {% load bootstrap4 %}
 {% bootstrap_css %}
 {% bootstrap_javascript jquery=True %}
 <html lang="ja">
 <head>
+
+    <title>みんなの○○地図</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -11,6 +14,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <!--自作CSSでBootstrap　CSSを上書き　-->
+    <link rel="stylesheet" href="{% static 'css/grid.css' %}">
 
 
 
