--- a/templates/search.html
+++ b/templates/search.html
@@ -11,13 +11,56 @@
 
             <div class="col-md-12">
 
-                <form action="" method="post">
-                    <p>
-                        <input type="image" src="" alt="ホームボタン">
-                    </p>
-                </form>
+                <table>
+                    <tr>
+                        <td>
+                            <form>
+                                <input type="submit" value="" class="home_btn">
+                            </form>
+                        </td>
+                        <td>
+                            <form>
+                                <input type="submit" value="" class="zoom_btn">
+                            </form>
+                        </td>
+                        <td>
+                            <form>
+                                <input type="submit" value="" class="search_btn">
+                            </form>
+                        </td>
+
+                        <td>
+                            <form>
+                                <input type="submit" value="" class="edit_btn">
+                            </form>
+                        </td>
 
 
+                        <td>
+                            <form>
+                                <input type="submit" value="" class="comment_btn">
+                            </form>
+                        </td>
+
+
+                        <td>
+                            <form>
+                                <input type="submit" value="" class="fav_btn">
+                            </form>
+                        </td>
+
+                        <td>
+                            <div align="center" class="user">ユーザー名が入る</div>
+                        </td>
+
+                        <td>
+                            <form>
+                                <input type="submit" value="" class="account_btn">
+                            </form>
+                        </td>
+
+                    </tr>
+                </table>
             </div>
 
 
@@ -40,28 +83,22 @@
         <div class="row">
 
 
-            <div class="col-md-8">地点データ
+            <div class="col-md-8">
 
 
-                <table border="1" width="500" cellspacing="0" cellpadding="5" bordercolor="#333333">
-                    <tr>
-                        <th bgcolor="#EE0000"><font color="#FFFFFF">名称</font></th>
-                        <th bgcolor="#EE0000" width="150"><font color="#FFFFFF">緯度</font></th>
-                        <th bgcolor="#EE0000" width="200"><font color="#FFFFFF">経度</font></th>
-                    </tr>
-                    <tr>
-                        <td bgcolor="#FFFFFF" align="right" nowrap>{{ name }}</td>
-                        <td bgcolor="#FFFFFF" valign="top" width="150">{{ lat }}</td>
-                        <td bgcolor="#FFFFFF" valign="top" width="200">{{ lon }}</td>
-                    </tr>
-                </table>
-
+                {#                <iframe id="inlineFrameExample"#}
+                {#                        title="Inline Frame Example"#}
+                {#                        width="300"#}
+                {#                        height="200"#}
+                {#                        src="test2.html">#}
+                {#                </iframe>#}
 
                 <iframe id="inlineFrameExample"
                         title="Inline Frame Example"
-                        width="300"
-                        height="200"
-                        src="test2.html">
+                        width=100%
+                        height=100%
+
+                        src="https://lisp-trpg.ddo.jp/trpg/onj/upload/upl/OpnyVGeDAFqDcYii8eYh/blood_donation.html">
                 </iframe>
 
 
@@ -102,6 +139,34 @@
 
 
         </div>
+
+    </div>
+
+
+    <div class="row">
+
+
+        <div class="col-md-12 data">
+
+
+            <table border="1" width="500" cellspacing="0" cellpadding="5" bordercolor="#333333">
+                <tr>
+                    <th bgcolor="#EE0000"><font color="#FFFFFF">名称</font></th>
+
+                    <th bgcolor="#EE0000" width="150"><font color="#FFFFFF">緯度</font></th>
+                    <th bgcolor="#EE0000" width="200"><font color="#FFFFFF">経度</font></th>
+                </tr>
+                <tr>
+                    <td bgcolor="#FFFFFF" align="right" nowrap>{{ name }}</td>
+
+                    <td bgcolor="#FFFFFF" valign="top" width="150">{{ lat }}</td>
+                    <td bgcolor="#FFFFFF" valign="top" width="200">{{ lon }}</td>
+                </tr>
+            </table>
+
+
+        </div>
+
 
     </div>
 
