--- a/templates/search.html
+++ b/templates/search.html
@@ -9,7 +9,7 @@
         <div class="row">
 
 
-            <div class="col-md-12">
+            <div class="col-md-12 header">
 
                 <table>
                     <tr>
@@ -140,33 +140,43 @@
 
         </div>
 
+        <div class="row">
+
+        <div class="col-md-12 gap">
+            {##}ギャップ
+
+        </div>
+
     </div>
+
+    </div>
+
 
 
     <div class="row">
 
-
-        <div class="col-md-12 data">
-
-
-            <table border="1" width="500" cellspacing="0" cellpadding="5" bordercolor="#333333">
-                <tr>
-                    <th bgcolor="#EE0000"><font color="#FFFFFF">名称</font></th>
-
-                    <th bgcolor="#EE0000" width="150"><font color="#FFFFFF">緯度</font></th>
-                    <th bgcolor="#EE0000" width="200"><font color="#FFFFFF">経度</font></th>
-                </tr>
-                <tr>
-                    <td bgcolor="#FFFFFF" align="right" nowrap>{{ name }}</td>
-
-                    <td bgcolor="#FFFFFF" valign="top" width="150">{{ lat }}</td>
-                    <td bgcolor="#FFFFFF" valign="top" width="200">{{ lon }}</td>
-                </tr>
-            </table>
-
-
+        <div class="col-md-12 footer">
+            {##}フッター
+            {##}
+            {#            <table border="1" width=100% cellspacing="0" cellpadding="5" bordercolor="#333333">#}
+            {#                <tr>#}
+            {#                    <th bgcolor="#EE0000"><font color="#FFFFFF">名称</font></th>#}
+            {#                    <th bgcolor="#EE0000" width="300"><font color="#FFFFFF">所在地</font></th>#}
+            {#                    <th bgcolor="#EE0000" width="200"><font color="#FFFFFF">緯度</font></th>#}
+            {#                    <th bgcolor="#EE0000" width="200"><font color="#FFFFFF">経度</font></th>#}
+            {#                    <th bgcolor="#EE0000" width="500"><font color="#FFFFFF">メモ</font></th>#}
+            {#                </tr>#}
+            {#                <tr>#}
+            {#                    <td bgcolor="#FFFFFF" align="right" nowrap>{{ name }}</td>#}
+            {#                    <td bgcolor="#FFFFFF" valign="top" width="300">{{ address }}</td>#}
+            {#                    <td bgcolor="#FFFFFF" valign="top" width="200">{{ lat }}</td>#}
+            {#                    <td bgcolor="#FFFFFF" valign="top" width="200">{{ lon }}</td>#}
+            {#                    <td bgcolor="#FFFFFF" valign="top" width="500">ここにメモ等情報が表示される</td>#}
+            {#                </tr>#}
+            {#            </table>#}
+            {##}
+            {##}
         </div>
-
 
     </div>
 
