--- a/templates/search.html
+++ b/templates/search.html
@@ -4,67 +4,110 @@
 
     <body>
 
+
+    <div class="row">
+
+
+        <div class="col-md-12 header">
+
+            {#            <table>#}
+            {#                <tr>#}
+            {#                    <td>#}
+            {#                        <form>#}
+            {#                            <input type="submit" value="" class="home_btn">#}
+            {#                        </form>#}
+            {#                    </td>#}
+            {#                    <td>#}
+            {#                        <form>#}
+            {#                            <input type="submit" value="" class="zoom_btn">#}
+            {#                        </form>#}
+            {#                    </td>#}
+            {#                    <td>#}
+            {#                        <form>#}
+            {#                            <input type="submit" value="" class="search_btn">#}
+            {#                        </form>#}
+            {#                    </td>#}
+            {##}
+            {#                    <td>#}
+            {#                        <form>#}
+            {#                            <input type="submit" value="" class="edit_btn">#}
+            {#                        </form>#}
+            {#                    </td>#}
+            {##}
+            {##}
+            {#                    <td>#}
+            {#                        <form>#}
+            {#                            <input type="submit" value="" class="comment_btn">#}
+            {#                        </form>#}
+            {#                    </td>#}
+            {##}
+            {##}
+            {#                    <td>#}
+            {#                        <form>#}
+            {#                            <input type="submit" value="" class="fav_btn">#}
+            {#                        </form>#}
+            {#                    </td>#}
+            {##}
+            {#                    <td>#}
+            {#                        <div align="center" class="user">ユーザー名が入る</div>#}
+            {#                    </td>#}
+            {##}
+            {#                    <td>#}
+            {#                        <form>#}
+            {#                            <input type="submit" value="" class="account_btn">#}
+            {#                        </form>#}
+            {#                    </td>#}
+            {##}
+            {#                </tr>#}
+            {#            </table>#}
+            <div id="container">
+                <div>
+                    <form>
+                        <input type="submit" value="" class="home_btn">
+                    </form>
+                </div>
+
+                <div>
+                    <form>
+                        <input type="submit" value="" class="zoom_btn">
+                    </form>
+                </div>
+                <div>
+                    <form>
+                        <input type="submit" value="" class="search_btn">
+                    </form>
+                </div>
+                <div>
+                    <form>
+                        <input type="submit" value="" class="edit_btn">
+                    </form>
+                </div>
+                <div>
+                    <form>
+                        <input type="submit" value="" class="comment_btn">
+                    </form>
+                </div>
+                <div>
+                    <form>
+                        <input type="submit" value="" class="fav_btn">
+                    </form>
+                </div>
+                <div>
+                    <div align="center" class="user">ユーザー</div>
+                </div>
+                <div>
+                    <form>
+                        <input type="submit" value="" class="account_btn">
+                    </form>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+
     <div class="container-fluid">
 
-        <div class="row">
-
-
-            <div class="col-md-12 header">
-
-                <table>
-                    <tr>
-                        <td>
-                            <form>
-                                <input type="submit" value="" class="home_btn">
-                            </form>
-                        </td>
-                        <td>
-                            <form>
-                                <input type="submit" value="" class="zoom_btn">
-                            </form>
-                        </td>
-                        <td>
-                            <form>
-                                <input type="submit" value="" class="search_btn">
-                            </form>
-                        </td>
-
-                        <td>
-                            <form>
-                                <input type="submit" value="" class="edit_btn">
-                            </form>
-                        </td>
-
-
-                        <td>
-                            <form>
-                                <input type="submit" value="" class="comment_btn">
-                            </form>
-                        </td>
-
-
-                        <td>
-                            <form>
-                                <input type="submit" value="" class="fav_btn">
-                            </form>
-                        </td>
-
-                        <td>
-                            <div align="center" class="user">ユーザー名が入る</div>
-                        </td>
-
-                        <td>
-                            <form>
-                                <input type="submit" value="" class="account_btn">
-                            </form>
-                        </td>
-
-                    </tr>
-                </table>
-            </div>
-
-
-        </div>
 
         <div class="row">
 
@@ -115,7 +158,7 @@
                         <textarea id="name" name="name">{{ name }}</textarea>
                     </div>
                     <div>
-                        <label for="address">所在地</label>
+                        <label for="address">住所</label>
                         <textarea id="address" name="address">{{ address }}</textarea>
                     </div>
 
@@ -142,15 +185,14 @@
 
         <div class="row">
 
-        <div class="col-md-12 gap">
-            {##}ギャップ
+            <div class="col-md-12 gap">
+                {##}ギャップ
+
+            </div>
 
         </div>
 
     </div>
-
-    </div>
-
 
 
     <div class="row">
