--- a/static/css/grid.css
+++ b/static/css/grid.css
@@ -1,3 +1,19 @@
+.header {
+    font-size: 30px;
+    color: white;
+    background: rgba(167, 164, 197, 1);
+    width:100%;
+
+
+}
+
+
+#container {
+    display: grid;
+    grid-auto-rows: 100px;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+}
+
 .container-fluid {
 
     background-color: mediumpurple;
@@ -8,13 +24,7 @@
 
 }
 
-.header {
-    font-size: 30px;
-    color: white;
-    background: rgba(167, 164, 197, 1);
 
-
-}
 
 .news {
     font-size: 30px;
@@ -42,7 +52,7 @@
     width: 75px;
     height: 80px;
     background: url(../png/home.png) left top no-repeat;
-    margin: 15px 15px 0px 15px;
+    margin: 15px 15px 0px 10px;
 }
 
 
@@ -57,7 +67,7 @@
     width: 75px;
     height: 80px;
     background: url(../png/zoom.png) left top no-repeat;
-    margin: 35px 0px 0px 250px;
+    margin: 30px 0px 0px 10px;
 }
 
 
@@ -72,7 +82,8 @@
     width: 75px;
     height: 80px;
     background: url(../png/search.png) left top no-repeat;
-    margin: 5px 0px 0px 20px;
+    margin: 5px 0px 0px 10px;
+
 }
 
 
@@ -86,7 +97,7 @@
     width: 75px;
     height: 80px;
     background: url(../png/edit.png) left top no-repeat;
-    margin: 5px 0px 0px 20px;
+    margin: 5px 0px 0px 10px;
 }
 
 
@@ -100,7 +111,7 @@
     width: 110px;
     height: 80px;
     background: url(../png/comment.png) left top no-repeat;
-    margin: 5px 0px 0px 0px;
+    margin: 10px 0px 0px 10px;
 }
 
 
@@ -114,7 +125,7 @@
     width: 110px;
     height: 80px;
     background: url(../png/fav.png) left top no-repeat;
-    margin: 5px 0px 0px 20px;
+    margin: 15px 0px 0px 10px;
 }
 
 
@@ -124,11 +135,12 @@
 }
 
 .user {
+    font-size: 25px;
     border: 0px;
-    width: 300px;
-    height: 50px;
+    width: 110px;
+    height: 40px;
     background: lightgrey;
-    margin: 25px 0px 30px 20px;
+    margin: 30px 0px 0px 10px;
 }
 
 .account_btn {
@@ -136,7 +148,7 @@
     width: 110px;
     height: 80px;
     background: url(../png/account.png) left top no-repeat;
-    margin: 5px 0px 0px 30px;
+    margin: 5px 0px 0px 20px;
 }
 
 
